--- a/Rfoof/Rfoof/View/Base.lproj/Main.storyboard
+++ b/Rfoof/Rfoof/View/Base.lproj/Main.storyboard
@@ -133,11 +133,11 @@
             <objects>
                 <viewController id="wIs-EH-SZl" customClass="LoginViewController" customModule="Rfoof" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="TnN-ID-Nne">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="647"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="equalCentering" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="eoG-yV-8PV">
-                                <rect key="frame" x="16" y="141" width="343" height="305"/>
+                                <rect key="frame" x="16" y="97" width="343" height="305"/>
                                 <subviews>
                                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="equalCentering" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="3mo-SM-HFr">
                                         <rect key="frame" x="0.0" y="0.0" width="343" height="185"/>
@@ -178,7 +178,7 @@
                                             </textField>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="wH2-57-G1s">
                                                 <rect key="frame" x="0.0" y="155" width="343" height="30"/>
-                                                <color key="backgroundColor" name="test"/>
+                                                <color key="backgroundColor" name="Gg"/>
                                                 <color key="tintColor" systemColor="systemRedColor"/>
                                                 <constraints>
                                                     <constraint firstAttribute="height" constant="30" id="XjI-d4-8Zi"/>
@@ -224,7 +224,7 @@
                             </stackView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="M5y-fO-hDb"/>
-                        <color key="backgroundColor" name="test"/>
+                        <color key="backgroundColor" name="Gg"/>
                         <constraints>
                             <constraint firstItem="eoG-yV-8PV" firstAttribute="top" secondItem="M5y-fO-hDb" secondAttribute="top" constant="97" id="7dc-7f-uZ1"/>
                             <constraint firstItem="eoG-yV-8PV" firstAttribute="leading" secondItem="M5y-fO-hDb" secondAttribute="leading" constant="16" id="oiW-jJ-Xz0"/>
@@ -549,7 +549,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="WZT-f2-rbR" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="3956" y="1312.8935532233884"/>
+            <point key="canvasLocation" x="3716" y="1313"/>
         </scene>
         <!--Tab Bar Controller-->
         <scene sceneID="AbD-bw-3zU">
@@ -579,7 +579,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" spacing="50" translatesAutoresizingMaskIntoConstraints="NO" id="FnJ-t6-nbl">
-                                <rect key="frame" x="16" y="20" width="343" height="471"/>
+                                <rect key="frame" x="16" y="64" width="343" height="471"/>
                                 <subviews>
                                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="G2R-8S-JfZ">
                                         <rect key="frame" x="96.5" y="0.0" width="150" height="150"/>
@@ -682,7 +682,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="J6W-nT-2py" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2271.1999999999998" y="1312.8935532233884"/>
+            <point key="canvasLocation" x="1310" y="1313"/>
         </scene>
         <!--Edit Profile View Controller-->
         <scene sceneID="TIl-nP-zrG">
@@ -693,7 +693,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="equalSpacing" alignment="center" spacing="50" translatesAutoresizingMaskIntoConstraints="NO" id="iIU-rk-x9o">
-                                <rect key="frame" x="16" y="20" width="343" height="465"/>
+                                <rect key="frame" x="16" y="64" width="343" height="465"/>
                                 <subviews>
                                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="j3J-uK-iDl">
                                         <rect key="frame" x="96.5" y="0.0" width="150" height="150"/>
@@ -796,18 +796,18 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="4eq-EQ-zgs" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="3073" y="1313"/>
+            <point key="canvasLocation" x="2414" y="1313"/>
         </scene>
         <!--Register View Controller-->
         <scene sceneID="a4D-tI-keB">
             <objects>
                 <viewController id="7jc-Mk-AWg" customClass="RegisterViewController" customModule="Rfoof" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="Abo-SR-cBT">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="647"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" spacing="20" translatesAutoresizingMaskIntoConstraints="NO" id="ewL-Tu-fgS">
-                                <rect key="frame" x="16" y="64" width="343" height="568"/>
+                                <rect key="frame" x="16" y="20" width="343" height="568"/>
                                 <subviews>
                                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="images" translatesAutoresizingMaskIntoConstraints="NO" id="ttL-Qu-en9">
                                         <rect key="frame" x="96.5" y="0.0" width="150" height="150"/>
@@ -1046,37 +1046,18 @@
                     </navigationBar>
                     <nil name="viewControllers"/>
                     <connections>
-                        <segue destination="f6d-UZ-yTS" kind="relationship" relationship="rootViewController" id="By0-lI-ABx"/>
+                        <segue destination="zHm-N5-pX3" kind="relationship" relationship="rootViewController" id="Atg-dq-vjy"/>
                     </connections>
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="QyO-gv-KAn" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="137" y="1313"/>
         </scene>
-        <!--Navigation Controller-->
-        <scene sceneID="76N-ys-BDR">
-            <objects>
-                <navigationController automaticallyAdjustsScrollViewInsets="NO" navigationBarHidden="YES" id="f6d-UZ-yTS" sceneMemberID="viewController">
-                    <toolbarItems/>
-                    <navigationItem key="navigationItem" id="fhX-Fx-Brc"/>
-                    <nil key="simulatedTopBarMetrics"/>
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="MIu-oD-Yin">
-                        <autoresizingMask key="autoresizingMask"/>
-                    </navigationBar>
-                    <nil name="viewControllers"/>
-                    <connections>
-                        <segue destination="zHm-N5-pX3" kind="relationship" relationship="rootViewController" id="Wxq-ZN-srV"/>
-                    </connections>
-                </navigationController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="EW8-uV-7H6" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="1332" y="1312.8935532233884"/>
-        </scene>
     </scenes>
     <inferredMetricsTieBreakers>
         <segue reference="EBX-T4-oaB"/>
         <segue reference="Jwd-Yq-FsM"/>
-        <segue reference="4S1-kM-iGK"/>
+        <segue reference="PCA-PQ-mP6"/>
     </inferredMetricsTieBreakers>
     <color key="tintColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
     <resources>
